--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" translate="no" data-critters-container>
     <head>
         <meta charset="utf-8">
-        <title>Sakai - PrimeNG</title>
+        <title>Harold Aguirre CV</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,5 +11,5 @@
 
     <body>
         <app-root></app-root>
-    <script src="runtime.efc655beb3dbe3cf.js" type="module"></script><script src="polyfills.766643b61e9809d8.js" type="module"></script><script src="scripts.ba1ca64a12b8ad9b.js" defer></script><script src="main.44674ec236bc92c9.js" type="module"></script></body>
+    <script src="runtime.183945174b636796.js" type="module"></script><script src="polyfills.743bebfc73808adb.js" type="module"></script><script src="scripts.68aff90f522e876f.js" defer></script><script src="main.2526c6aa5c8bbe11.js" type="module"></script></body>
 </html>
